<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/horizontal_width"
    android:paddingRight="@dimen/horizontal_width"
    android:paddingTop="@dimen/vertical_width"
    android:paddingBottom="@dimen/vertical_width">

    <TextView
        android:id="@+id/flavourType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="demo"/>

    <Button
        android:id="@+id/btn_speak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speak"
        android:layout_centerHorizontal="true"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_view_dictionary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btn_speak"
        android:paddingTop="@dimen/vertical_width" />

</RelativeLayout>